--- a/covariance.ipynb
+++ b/covariance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "covariance.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtKS7F7DMxaOmtTAHm6fDk",
+      "authorship_tag": "ABX9TyOFs2YG3pz5sJ6tnxVmYMt3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,72 +321,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "btYSiUHK0Nc0",
-        "outputId": "94b63bd7-ab7f-44a1-a8c4-b55ffd1a85fc"
-      },
-      "source": [
-        "X=df[['traveltime']]\n",
-        "Y=df[['studytime']]\n",
-        "print(X)\n",
-        "print(Y)"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "     traveltime\n",
-            "0             2\n",
-            "1             1\n",
-            "2             1\n",
-            "3             1\n",
-            "4             1\n",
-            "..          ...\n",
-            "390           1\n",
-            "391           2\n",
-            "392           1\n",
-            "393           3\n",
-            "394           1\n",
-            "\n",
-            "[395 rows x 1 columns]\n",
-            "     studytime\n",
-            "0            2\n",
-            "1            2\n",
-            "2            2\n",
-            "3            3\n",
-            "4            2\n",
-            "..         ...\n",
-            "390          2\n",
-            "391          1\n",
-            "392          1\n",
-            "393          1\n",
-            "394          1\n",
-            "\n",
-            "[395 rows x 1 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "iH6vDfB72U2F",
-        "outputId": "e527b107-ae80-42a7-bbda-49436feed410"
+        "outputId": "2635d00d-5a5b-4597-d43b-bb2e1dc61dea"
       },
       "source": [
-        "covariance=np.cov(X,Y,bias=True)[0][1]\n",
+        "covariance=np.cov(df[['traveltime','studytime']])[1][2]\n",
         "print(covariance)"
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.0\n"
+            "0.5\n"
           ],
           "name": "stdout"
         }
